2015-01-16  Yoshifuji Naoki <lwisteria.ao@gmail.com>

	* src/e-loader/src/e-loader.c: Make 'executable' argument const
	to suppress warnings.
	* src/e-loader/src/e-loader.h: Likewise.
	* src/e-loader/src/e-process-SREC.c: Likewise.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-shm-manager.c (int e_shm_init): Add
	missing newlines.
	(static int shm_table_sanity_check): Likewise.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-shm-manager.c (int e_shm_init): Lower
	the severity for select SHM error reports.
	(static int shm_table_sanity_check): Likewise.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal-data.h: Be more explicit about
	bitfield members' width.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-read/src/e-read.c (int main): Call
	e_reset_system() before accessing Epiphany chip.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-write/src/e-write.c (int main): Call
	e_reset_system() before writing to Epiphany chip.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-loader/src/e-loader.c (int main): Always call
	'e_reset_system()'. Make reset flags no-ops. Do not call
	'e_finalize()'.
	(void usage): Remove reset flags.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-hw-rev/Makefile: Add e-hal to include search path.
	Link with e-hal.
	* src/e-utils/e-hw-rev/e-hw-rev.c (void print_platform_info):
	Created.
	(int main): Use e-hal API.
	(int e_open): Removed
	(int e_read_esys): Removed

2015-01-14  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal-data.h: Removing base addresses for
	clarity, most of these addresses will never change.
	Added missing registers in chip.
	Fixed names to correspond to architecture manual and datasheet for
	chip.
	* src/e-hal/src/epiphany-hal.c (int ee_read_reg): Adjust for
	above.
	(ssize_t ee_write_reg): Likewise.
	(static int enable_clock_gating): Likewise.
